--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
+    box-sizing: border-box;
 }
 
 .register-container {
@@ -46,7 +47,8 @@ body {
 }
 
 .input-text {
-    width: 680px;
+    width: 100%;
+    max-width: 680px;
     height: 58px;
     padding: 10px;
     gap: 0px;
@@ -64,7 +66,8 @@ body {
 
 .btn-submit {
     display: block;
-    width: 680px;
+    width: 100%;
+    max-width: 680px;
     height: 65px;
     gap: 0px;
     background-color: rgba(255, 85, 85, 1);
@@ -101,18 +104,6 @@ body {
     text-decoration: underline;
 }
 
-@media screen and (max-width: 1540px) {
-    .register-container {
-        max-width: 90%;
-    }
-    .input-text {
-        height: 45px;
-    }
-    .btn-submit {
-        height: 45px;
-    }
-}
-
 @media screen and (max-width: 850px) {
     .register-container {
         padding: 15px;
@@ -121,17 +112,17 @@ body {
         font-size: 28px;
     }
     .form-group label {
-        font-size: 16px;
+        font-size: 18px;
     }
     .input-text {
-        height: 40px;
+        height: 45px;
     }
     .btn-submit {
+        height: 45px;
         font-size: 18px;
-        height: 40px;
     }
     .error-message {
-        font-size: 14px;
+        font-size: 16px;
     }
 }
 
@@ -144,15 +135,15 @@ body {
         margin-bottom: 20px;
     }
     .form-group label {
-        font-size: 14px;
+        font-size: 16px;
     }
     .input-text {
-        height: 36px;
+        height: 40px;
         font-size: 14px;
     }
     .btn-submit {
         font-size: 16px;
-        height: 36px;
+        height: 40px;
         margin-top: 30px;
     }
     .error-message {
