--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,17 +1,14 @@
 .container {
     background-color: rgba(0, 0, 0, 1);
-    width: 100%;
     max-width: 1515px;
-    height: 80px;
-    gap: 0px;
-    margin: 0 auto;
-    height: auto;
     padding: 0 20px;
+    margin: 0 auto;
 }
 
-.header {
+.main-header {
     background-color: rgba(0, 0, 0, 1);
     padding: 10px 20px;
+    height: 80px;
     display: flex;
     justify-content: space-between; /* ロゴとメニューを左右に配置 */
     align-items: center;
@@ -22,10 +19,15 @@
     height: 36.01px;
     gap: 0px;
     color: rgba(255, 255, 255, 1);
+    display: flex;
+    align-items: center;
 }
 
 .header__search {
     flex: 1; /* 中央にスペースを割り当て */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 0 20px; /* 左右のマージンを追加 */
 }
 
@@ -33,7 +35,7 @@
     max-width: 500px;
     height: 50px;
     gap: 0px;
-    padding: 0 10px;
+    padding: 5px 10px;
     border-radius: 5px;
     color: rgba(0, 0, 0, 1);
     background: rgba(255, 255, 255, 1);
@@ -48,10 +50,12 @@
 
 .header__menu {
     display: flex;
-    gap: 20px; /* 各リンク間のスペース */
+    align-items: center;
+    gap: 15px; /* 各リンク間のスペース */
 }
 
-.header__menu a {
+.header__menu a,
+.header__menu button {
     color: rgba(255, 255, 255, 1);
     text-decoration: none;
     font-family: Inter;
@@ -61,24 +65,22 @@
     text-align: center;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
+    margin-right: 30px;
 }
 
-.header__menu a:hover {
+.header__menu a:hover, .header__menu button:hover {
     text-decoration: underline; /* ホバー時に下線を追加 */
 }
 
 .header__sell-btn {
     background-color: rgba(255, 255, 255, 1);
-    color: rgba(0, 0, 0, 1);
+    color: rgba(0, 0, 0, 1) !important;
     padding: 10px 20px;
     border-radius: 4px;
-    text-align: center;
-    font-size: 14px;
-    font-weight: bold;
     border: none;
     cursor: pointer;
-    width: 100px;
-    height: 50px;
+    min-width: 100px;
+    height: 49px;
     gap: 0px;
     font-family: Inter;
     font-size: 24px;
@@ -87,6 +89,8 @@
     text-align: center;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
+    display: inline-block;
+    text-decoration: none;
 }
 
 .header__sell-btn:hover {
