--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,14 +1,20 @@
+body {
+    margin: 0;
+    padding: 0;
+    background-color: rgba(255, 255, 255, 1);
+}
+
 .product-container {
     padding: 20px;
-    max-width: 1512px;
     margin: 0 auto;
+    width: 100%;
     font-family: Inter;
+    background: rgba(255, 255, 255, 1);
 }
 
 .product-tabs {
     display: flex;
-    gap: 20px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 2px solid rgba(95, 95, 95, 1);
     margin-bottom: 20px;
     font-size: 24px;
     font-weight: 700;
@@ -16,23 +22,24 @@
     text-align: right;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
+    max-width: 1515px;
+    height: 90px;
 }
 
 .tab {
     text-decoration: none;
     color: rgba(95, 95, 95, 1);
     padding-bottom: 5px;
-    border-bottom: 2px solid transparent;
     transition: all 0.3s;
-}
-
-.tab:hover {
-    border-bottom: 2px solid rgba(255, 0, 0, 1);
+    margin-left: 150px;
+    margin-top: 35px;
 }
 
 .tab.active {
     color: rgba(255, 0, 0, 1);
-    border-bottom: 2px solid rgba(255, 0, 0, 1);
+    border: none;
+    margin-left: 130px;
+    margin-top: 35px;
 }
 
 .product-grid {
