--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,6 +1,11 @@
-.container {
+body {
+    margin: 0;
+    padding: 0;
     background-color: rgba(0, 0, 0, 1);
-    max-width: 1515px;
+}
+
+.container {
+    width: 100%;
     padding: 0 20px;
     margin: 0 auto;
 }
@@ -10,7 +15,7 @@
     padding: 10px 20px;
     height: 80px;
     display: flex;
-    justify-content: space-between; /* ロゴとメニューを左右に配置 */
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -66,6 +71,10 @@
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
     margin-right: 30px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
 }
 
 .header__menu a:hover, .header__menu button:hover {
@@ -73,9 +82,10 @@
 }
 
 .header__sell-btn {
-    background-color: rgba(255, 255, 255, 1);
+    all: unset;
+    background-color: rgba(255, 255, 255, 1) !important;
     color: rgba(0, 0, 0, 1) !important;
-    padding: 10px 20px;
+    padding: 0px;
     border-radius: 4px;
     border: none;
     cursor: pointer;
@@ -89,12 +99,21 @@
     text-align: center;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    display: inline-block;
+    display: flex;
     text-decoration: none;
+    justify-content: center;
+    align-items: center;
 }
+
 
 .header__sell-btn:hover {
     background-color: rgba(255, 255, 255, 1); /* ホバー時の背景色 */
 }
 
+.header__menu a:not(.header__sell-btn),
+.header__menu button:not(.header__sell-btn) {
+    padding: 0;
+    background: none;
+    border: none;
+}
 
