--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -44,18 +44,16 @@ body {
 
 .product-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
+    padding: 20px;
 }
 
 .product-card {
-    border: 1px solid #ddd;
-    border-radius: 8px;
     overflow: hidden;
-    background-color: #fff;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     text-align: center;
     padding: 10px;
+    border-radius: 4px;
 }
 
 .product-image {
@@ -64,12 +62,11 @@ body {
     height: 290px;
     border-radius: 4px;
     padding-top: 100%;
-    background-color: #f5f5f5;
+    background-color: rgba(255, 255, 255, 1);
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
 
 .product-image img {
     position: absolute;
@@ -78,6 +75,8 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    background: rgba(217, 217, 217, 1);
+    border-radius: 4px;
 }
 
 .sold-badge {
@@ -85,7 +84,7 @@ body {
     top: 10px;
     left: 10px;
     background-color: rgba(255, 0, 0, 1);
-    color: white;
+    color: rgba(255, 255, 255, 1);
     padding: 5px 10px;
     font-size: 14px;
     font-weight: bold;
