--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -29,11 +29,11 @@ body {
 }
 
 .header__search {
-    flex: 1; /* 中央にスペースを割り当て */
+    flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 20px; /* 左右のマージンを追加 */
+    margin: 0 20px;
 }
 
 .header__search input {
@@ -56,7 +56,7 @@ body {
 .header__menu {
     display: flex;
     align-items: center;
-    gap: 15px; /* 各リンク間のスペース */
+    gap: 15px;
 }
 
 .header__menu a,
@@ -78,7 +78,7 @@ body {
 }
 
 .header__menu a:hover, .header__menu button:hover {
-    text-decoration: underline; /* ホバー時に下線を追加 */
+    text-decoration: underline;
 }
 
 .header__sell-btn {
@@ -105,9 +105,8 @@ body {
     align-items: center;
 }
 
-
 .header__sell-btn:hover {
-    background-color: rgba(255, 255, 255, 1); /* ホバー時の背景色 */
+    background-color: rgba(255, 255, 255, 1);
 }
 
 .header__menu a:not(.header__sell-btn),
