--- a/src/public/css/verify-email.css
+++ b/src/public/css/verify-email.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: Inter;
     background-color: #f9f9f9;
     margin: 0;
     padding: 0;
@@ -33,20 +33,23 @@ body {
     margin-bottom: 20px;
 }
 
-.verify-email-container a {
-    color: #007bff;
-    text-decoration: none;
-    font-weight: bold;
+.resend-button {
+    background-color: #007bff;
+    color: #ffffff;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
-.verify-email-container a:hover {
-    text-decoration: underline;
-    color: #0056b3;
+.resend-button:hover {
+    background-color: #0056b3;
 }
 
 @media screen and (max-width: 768px) {
     .verify-email-container {
-        width: 90%;
         padding: 15px;
     }
 
