--- a/src/public/css/edit.css
+++ b/src/public/css/edit.css
@@ -33,7 +33,7 @@ body {
     display: flex;
     align-items: center;
     width: 680px;
-    flex-direction: column;
+    justify-content: flex-start
 }
 
 .image-preview {
@@ -88,7 +88,7 @@ body {
     text-align: center;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    margin-left: 30px;
+    margin-left: 10px;
 }
 
 .btn-select-image:hover {
@@ -141,9 +141,10 @@ form {
 }
 
 .error-message {
-    font-size: 18px;
+    font-size: 16px;
     color: rgba(255, 85, 85, 1);
     margin-top: 5px;
+    text-align: center;
 }
 
 .btn-submit {
