--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -191,6 +191,12 @@ button.like-button,.like-section {
     margin-left: 20px;
 }
 
+.condition-section {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 29.05px;
+}
+
 .condition-text {
     font-size: 20px;
     font-weight: 400;
@@ -215,60 +221,99 @@ button.like-button,.like-section {
     padding: 0;
 }
 
+.comments-section ul:empty {
+    display: none; /* 空の場合に非表示にする */
+}
+
 .comments-section .comment {
-    background-color: #f8f8f8;
+    background-color: rgba(255, 255, 255, 1);
     padding: 10px;
-    border-radius: 8px;
+    border-radius: 5px;
     margin-bottom: 10px;
 }
 
+.comments-section .comment img {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    background: rgba(217, 217, 217, 1);
+    margin-right: 10px;
+    vertical-align: middle;
+    display: inline-block;
+}
+
+.user-profile-placeholder {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    background-color: rgba(217, 217, 217, 1);
+    margin-right: 10px;
+    vertical-align: middle;
+    display: inline-block;
+}
+
 .comments-section .comment strong {
-    font-size: 14px;
-    color: #333;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 36.31px;
+    margin-bottom: 20px;
+    text-align: left;
+    color: rgba(0, 0, 0, 1);
 }
 
 .comments-section .comment p {
-    margin: 5px 0 10px;
-    font-size: 14px;
-    color: #555;
-}
-
-.no-comment {
-    color: #999;
-    font-size: 14px;
-    padding: 10px;
-    background-color: #f9f9f9;
-    border-radius: 8px;
+    width: 570px;
+    margin: 20px 0 5px;
+    gap: 0px;
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 24.2px;
+    text-align: left;
+    padding: 10px 10px;
+    color: rgba(0, 0, 0, 1);
+    background: rgba(229, 229, 229, 1);
 }
 
 .comment-submit-btn {
     display: inline-block;
-    padding: 10px 20px;
-    font-size: 14px;
-    color: #fff;
-    background-color: #ff0000;
+    width: 570px;
+    height: 56px;
+    gap: 0px;
+    font-size: 25px;
+    font-weight: 700;
+    line-height: 30.26px;
+    text-align: center;
+    color: rgba(255, 255, 255, 1);
+    background-color: rgba(255, 85, 85, 1);
     border: none;
-    border-radius: 8px;
+    border-radius: 4px;
     cursor: pointer;
+    margin-bottom: 50px;
 }
 
 .comment-submit-btn:hover {
-    background-color: #cc0000;
+    background-color: rgba(255, 85, 85, 1);
 }
 
 #comment-form p {
-    font-size: 18px; /* フォントサイズ */
-    font-weight: bold; /* 強調表示 */
-    margin-bottom: 10px; /* コメント入力フォームとの間隔 */
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 33.89px;
+    margin-bottom: 10px;
+    margin-top: 5px;
+    color: rgba(0, 0, 0, 1);
 }
 
 textarea[name="content"] {
-    width: 100%;
+    width: 570px;
+    height: 246px;
+    gap: 10px;
     padding: 10px;
     font-size: 14px;
-    margin-bottom: 10px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
+    margin-bottom: 20px;
+    border: 2px solid rgba(95, 95, 95, 1);
+    border-radius: 2px;
     resize: none;
 }
 
