--- a/src/public/css/purchase.css
+++ b/src/public/css/purchase.css
@@ -1,12 +1,14 @@
 body {
-    font-family: 'Inter', sans-serif;
+    font-family: Inter;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
     background-color: #f9f9f9;
     margin: 0;
     padding: 0;
 }
 
 .purchase-container {
-    max-width: 1200px;
+    max-width: 1512px;
     margin: 30px auto;
     padding: 20px;
     display: flex;
@@ -20,30 +22,50 @@ body {
 .item-info {
     display: flex;
     gap: 20px;
-    margin-bottom: 20px;
+    padding-bottom: 50px;
+    border-bottom: 1px solid rgba(0, 0, 0, 1);
 }
 
 .item-image {
-    width: 150px;
-    height: 150px;
+    width: 177.53px;
+    height: 177.53px;
     object-fit: cover;
-    border-radius: 8px;
+    margin-left: 80px;
+    gap: 0px;
 }
 
 .item-details {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
+    margin-top: 0;
 }
 
 .item-name {
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 36.31px;
+    margin-bottom: 5px;
 }
 
 .item-price {
-    font-size: 20px;
-    color: #f00;
+    font-weight: 400;
+    font-family: Inter;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: rgba(0, 0, 0, 1);
+}
+
+.item-price-symbol {
+    font-size: 27px;
+    font-weight: 400;
+    line-height: 32.68px;
+}
+
+.item-price-value {
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 38.73px;
 }
 
 .payment-method {
