--- a/src/public/css/purchase.css
+++ b/src/public/css/purchase.css
@@ -93,6 +93,15 @@ body {
     margin-bottom: 50px;
     padding-left: 10px;
     cursor: pointer;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url('/triangle.svg');
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 13px 14px;
+    color: rgba(95, 95, 95, 1);
+    background-color: #f9f9f9;
+
 }
 
 .default-option {
@@ -179,47 +188,82 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 auto;
     max-width: 612px;
 }
 
 .summary {
-    flex: 1;
-    width: 100%;
+    width: 440px;
     background: #f9f9f9;
     border: 1px solid rgba(0, 0, 0, 1);
-    padding: 20px;
-    margin-bottom: 20px;
+    border-radius: 1px;
+    padding: 0px;
+    margin-bottom: 35px;
 }
 
 .summary-table {
-    width: 440px;
-    gap: 0px;
+    width: 100%;
     border-collapse: collapse;
+    color: rgba(0, 0, 0, 1);
 }
 
-
+.summary-table tr {
+    height: 115px; /* 各行を固定 */
+}
 
 .summary-table td {
-    height: 115px;
     padding: 10px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid rgba(0, 0, 0, 1);
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24.2px;
+    height: 115px;
 }
 
+/* 最後の行のボーダーを削除 */
 .summary-table tr:last-child td {
     border-bottom: none;
 }
 
+.price {
+    text-align: right;
+}
+
+.price-symbol {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24.2px;
+}
+
+.price-value {
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 29.05px;
+}
+
+.summary-button {
+    text-align: center;
+    margin-top: 20px;
+}
+
 .purchase-summary-btn {
-    width: 100%;
-    background-color: #f00;
-    color: #fff;
+    background-color: rgba(255, 85, 85, 1);
+    color: rgba(255, 255, 255, 1);
     padding: 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    width: 440px;
+    height: 60px;
+    gap: 0px;
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 31.47px;
+    text-align: center;
 }
 
 .purchase-summary-btn:hover {
-    background-color: #d00;
+    background-color: rgba(255, 85, 85, 1);
 }
 
